--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -18,7 +18,16 @@ body {
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Tsushima Font";
+  src: url("../fonts/Tsushima.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
+  --main-font:"Tsushima font", sans-serif;
+  --description-font: "Inter", sans-serif;
   --off-white: #dbd9d0;
   --red: #9f0d0a;
 }
@@ -31,7 +40,7 @@ body {
 }
 
 .navbar {
-  font-family: "Trajan Pro", sans-serif;
+  font-family: var(--main-font);
   position: fixed;
   top: 0;
   width: 100%;
@@ -85,7 +94,7 @@ body {
 }
 
 .quote-section {
-  font-family: "Trajan Pro", sans-serif;
+  
   background-color: var(--off-white);
   width: 100%;
   padding: 80px 0;
@@ -98,12 +107,14 @@ body {
 }
 
 .quote-text {
+  font-family: var(--description-font);
   font-size: 30px;
   font-style: italic;
   letter-spacing: 1px;
 }
 
 .quote-author {
+  font-family: var(--description-font);
   display: block;
   color: var(--red);
   font-size: 20px !important;
@@ -111,7 +122,6 @@ body {
 }
 
 .story-section {
-  font-family: "Trajan Pro", sans-serif;
   padding: 6rem 2rem;
   display: flex;
   flex-direction: column;
@@ -124,12 +134,13 @@ body {
 .story-title {
   color: var(--red);
   font-size: 4rem;
-  font-family: "Trajan Pro", sans-serif;
+  font-family: var(--main-font);
   justify-content: center;
   margin-bottom: 0;
 }
 
 .story-article {
+  font-family: var(--description-font);
   display: flex;
   flex-direction: column;
   font-size: 15px;
@@ -179,7 +190,7 @@ body {
 
 
 .feature-section {
-  font-family: "Trajan Pro", sans-serif;
+  font-family: "Tsushima font", sans-serif;
   background-image: url("../images/background.png");
   background-size: cover;
   background-position: center;
@@ -209,6 +220,7 @@ body {
 }
 
 .feature-section p {
+  font-family: var(--description-font);
   font-size: 15px;
   letter-spacing: 1px;
 }
