--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -46,6 +46,7 @@ body {
   width: 100%;
   z-index: 100;
   display: grid;
+  height: 80px;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   background-color: black;
@@ -74,13 +75,24 @@ body {
   font-size: 15px;
 }
 
-.hero {
+/*.hero-bg {
+  width: 100%;
+  display: block;
+} */
+
+.video-section {
   position: relative;
   width: 100%;
+  overflow: hidden;
+  margin-top: 45px;
+  z-index: 1;
 }
 
-.hero-bg {
+.hero-video {
   width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  transform: scale(1.02);
   display: block;
 }
 
@@ -90,14 +102,17 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 60%;
+  width: 50%;
+  opacity: 0.7;
 }
 
 .quote-section {
-  
-  background-color: var(--off-white);
+ background-color: var(--off-white);
   width: 100%;
-  padding: 80px 0;
+  padding: 50px 0;
+  margin-top: -28px;
+  position: relative;
+  z-index: 3;
 }
 
 .character-quote {
@@ -122,10 +137,11 @@ body {
 }
 
 .story-section {
-  padding: 6rem 2rem;
+  padding: 70px 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   max-width: 900px;
   gap: 2rem;
   margin: 0 auto;
@@ -133,9 +149,10 @@ body {
 
 .story-title {
   color: var(--red);
-  font-size: 4rem;
+  font-size: 60px;
   font-family: var(--main-font);
   justify-content: center;
+  white-space: nowrap;
   margin-bottom: 0;
 }
 
@@ -143,7 +160,7 @@ body {
   font-family: var(--description-font);
   display: flex;
   flex-direction: column;
-  font-size: 15px;
+  font-size: 17px;
   color: white;
 }
 
