--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -245,7 +245,7 @@ body {
 
 
 .feature-section {
-  font-family: "Tsushima font", sans-serif;
+  font-family: var(--main-font);
   background-image: url("../images/background.png");
   background-size: cover;
   background-position: center;
@@ -253,8 +253,7 @@ body {
   display: flex;
   gap: 40px;
   color: var(--off-white);
-  margin: 60px auto 80px auto;
-  padding: 0 20px;
+  padding: 140px 40px;
 }
 
 .feature-section-item {
@@ -264,7 +263,8 @@ body {
 
 .feature-section h2 {
   letter-spacing: 3px;
-  margin-bottom: 30px;
+  margin-bottom: 70px;
+  font-size: 27px;
 }
 
 .feature-section img {
@@ -276,7 +276,7 @@ body {
 
 .feature-section p {
   font-family: var(--description-font);
-  font-size: 15px;
+  font-size: 16px;
   letter-spacing: 1px;
 }
 
@@ -292,7 +292,7 @@ body {
   padding: 60px 40px;
   text-align: center;
   font-size: 12px;
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .footer-esrb img {
