--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -190,6 +190,10 @@ body {
   gap: 20px;
 }
 
+.screens-grid img {
+  cursor: pointer;
+}
+
 .shot {
   width: 100%;
   height: 100%;
@@ -216,7 +220,7 @@ body {
   object-fit: contain;
 }
 
-.prevous-button, .next-button {
+.previous-button, .next-button {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -227,7 +231,7 @@ body {
   cursor: pointer;
 }
 
-.prevous-button {
+.previous-button {
   left: 30px;
 }
 
@@ -279,6 +283,7 @@ body {
   max-width: 500px;
   object-fit: cover;
   margin-bottom: 15px;
+  cursor: pointer;
 }
 
 .feature-section p {
