--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -30,6 +30,7 @@ body {
   --description-font: "Inter", sans-serif;
   --off-white: #dbd9d0;
   --red: #9f0d0a;
+  --gray: #808080;
   --dark-gray: #0b0b0b;
   --black: #000;
   --white: white;
@@ -161,7 +162,7 @@ body {
 
 .story-mini-title {
   font-family: var(--description-font);
-  color: white;
+  color: var(--gray);
   margin: 0;
 }
 
