--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -79,11 +79,6 @@ body {
   font-size: 15px;
 }
 
-/*.hero-bg {
-  width: 100%;
-  display: block;
-} */
-
 .video-section {
   position: relative;
   width: 100%;
@@ -255,7 +250,7 @@ body {
 
 .feature-section {
   font-family: var(--main-font);
-  background-image: url("../images/background.png");
+  background-image: url("../images/feature-section-background.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
