--- a/styles/feedback.css
+++ b/styles/feedback.css
@@ -7,7 +7,7 @@ body {
   min-height: 100vh;
   background-image: url("../images/feedback-page-background.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
 }
 
@@ -26,7 +26,7 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 70px;
+  margin-top: 140px;
 }
 
 form {
@@ -125,7 +125,7 @@ textarea {
   }
 
   h2 {
-    margin-top: 100px;
+    margin-top: 180px;
     font-size: 24px;
     padding: 0 20px;
     text-align: center;
